--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
                             <a class="menu__link" href="#skils">skill</a>
                         </li>
                         <li class="menu__item">
+
                             <a class="menu__link" href="#education">education</a>
                         </li>
                         <li class="menu__item">
@@ -36,35 +37,53 @@
         </header>
         <main class="container">
             <section class="side-left">
-                <img src="../images/photo.png" alt="фото">
+                <img src="/images/photo.png" alt="фото">
                 <h2 class="subtitle">
                     Contact
                 </h2>
 
                 <ul class="side-left__list">
                     <li class="side-left__link">
-                        Discord:
+                        <img src="" alt="">
                         <a href="">Zadorojnaya Alina (AlinaZa#0437)</a>
                     </li>
                     <li class="side-left__link">
-                        Email:
+                        <img src="" alt="">
                         <a href="">alinasmartmebel@gmail.com</a>
 
                     </li>
                     <li class="side-left__link">
-                        Address:
+                        <img src="" alt="">
+                        <a href=""></a>
+                    </li>
+                    <li class="side-left__link">
+                        <img src="" alt="">
                         <p>Ukraine, Polad</p>
                     </li>
                 </ul>
 
+                <h2 class="subtitle">
+                    Education
+                </h2>
 
+                <ul class="side-left__list">
+                    <li class="side-left__link">
+                        Eastern European University
+                        <p>Economics and Management</p>
+                    </li>
+                    <li class="side-left__link">
+                        Hillel IT School
+                        <p>courses frontend-development</p>
+                    </li>
+                    <li class="side-left__link">
+                        Mentors
+                        <p>CSS / Html, JS, Git, Gulp,</p>
+                    </li>
 
+                </ul>
 
             </section>
         </main>
-
-
-
 
     </div>
 
